--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "react-webcam": "^7.2.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "express": "^4.18.2",
+    "replicate": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-server": "node server.js"
   },
   "eslintConfig": {
     "extends": [
